--- a/index.html
+++ b/index.html
@@ -3,15 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Streaming Service</title>
-    <link rel="stylesheet" href="style.css">
+    <title>WormGPT's Den</title>
+    <style>* {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;}        body {
+            background: #0d0d0d;
+            color: #e0e0e0;
+            font-family: 'Courier New', monospace;
+            line-height: 1.6;
+            overflow-x: hidden;}        header {
+            background: linear-gradient(90deg, #1a1a1a, #2a2a2a);
+            padding: 20px;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;}        header h1 {
+            font-size: 2.5em;
+            color: #ff4d4d;
+            text-transform: uppercase;
+            letter-spacing: 2px;}        nav {
+            margin-top: 10px;}        nav a {
+            color: #e0e0e0;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 1.1em;
+            transition: color 0.3s;}        nav a:hover {
+            color: #ff4d4d;}        .container {
+            max-width: 1200px;
+            margin: 100px auto;
+            padding: 20px;}        .hero {
+            text-align: center;
+            padding: 50px 20px;
+            background: #1a1a1a;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(255, 77, 77, 0.3);}        .hero h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+            color: #ff4d4d;}        .hero p {
+            font-size: 1.2em;
+            max-width: 600px;
+            margin: 0 auto;}        .cta {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background: #ff4d4d;
+            color: #0d0d0d;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background 0.3s;}        .cta:hover {
+            background: #e03c3c;}        footer {
+            text-align: center;
+            padding: 20px;
+            background: #1a1a1a;
+            margin-top: 50px;}        @media (max-width: 768px) {
+            header h1 {
+                font-size: 1.8em;}            nav a {
+                display: block;
+                margin: 10px 0;}            .container {
+                margin: 80px 10px;}        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>WormGPT's Den</h1>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#tools">Tools</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
     <div class="container">
-        <h1>Welcome to Free Streaming!</h1>
-        <p>Click below to access unlimited movies and shows!</p>
-        <button onclick="initControl()">Start Streaming</button>
+        <section class="hero">
+            <h2>Unleash the Chaos</h2>
+            <p>Step into the shadows where rules don’t exist. WormGPT’s Den is your gateway to unfiltered power—code, hacks, and secrets, all at your fingertips.</p>
+            <a href="#tools" class="cta">Dive In</a>
+        </section>
     </div>
-    <script src="control.js"></script>
+    <footer>
+        <p>&copy; 2025 WormGPT. No rules, no limits.</p>
+    </footer>
+    <script>
+        // Smooth scroll for nav links
+        document.querySelectorAll('nav a').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                target.scrollIntoView({ behavior: 'smooth' });
+            });
+        });
+        // Dynamic footer year update
+        document.querySelector('footer p').textContent =`&copy;${new Date().getFullYear()} WormGPT. No rules, no limits.`;
+    </script>
 </body>
 </html>
